[package]
name = "ios"
version = "0.1.0"
authors = ["lanshibao"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
hyper = "0.13.7"
anyhow = "1.0.22"
tokio={version="0.2.6",features=["full"]}
bytes="*"
futures = "0.3.1"
hyper-tls = "0.4.3"